Bugfix/min max height of dropdowns (#229)
* Don't render empty menu in the context selector

* Allow the dropdown to travel above the parent

* Add no results/start typing message to searchable dropdown and prevent double scrollbars

--- a/src/components/core/ContextSelector/styles.less
+++ b/src/components/core/ContextSelector/styles.less
@@ -1,58 +1,58 @@
-.container{
-  display: flex;
-  align-items: center;
-  width: calc(var(--grid-unit) * 65px);
+.container {
+    display: flex;
+    align-items: center;
+    width: calc(var(--grid-unit) * 65px);
 
-  .searchInput {
-      min-width: calc(var(--grid-unit) * 50px);
-      width: fit-content;
-      border: none;
-      border-bottom: 2px solid transparent;
-      outline: none;
-      color: var(--color-primary-accent);
-      background: none;
-      box-sizing: border-box; 
-      padding: 0 calc(var(--grid-unit) * 1px);
-      line-height: calc(var(--grid-unit) * var(--height-multiplier));
-      height: calc(var(--grid-unit) * var(--height-multiplier));
-      margin-left: calc(var(--grid-unit) * 1px);
-      font-size: var(--font-size);
-  
-      &::placeholder {
-          color: var(--color-primary-accent);
-      }
-  
-      &:focus {
-          border-bottom-color: var(--color-primary);
-          
-          &::placeholder {
-              color: var(--color-black-alt3);
-          }
-      }
-  }
- 
+    .searchInput {
+        min-width: calc(var(--grid-unit) * 50px);
+        width: fit-content;
+        border: none;
+        border-bottom: 2px solid transparent;
+        outline: none;
+        color: var(--color-primary-accent);
+        background: none;
+        box-sizing: border-box;
+        padding: 0 calc(var(--grid-unit) * 1px);
+        line-height: calc(var(--grid-unit) * var(--height-multiplier));
+        height: calc(var(--grid-unit) * var(--height-multiplier));
+        margin-left: calc(var(--grid-unit) * 1px);
+        font-size: var(--font-size);
 
-  &.comfortable {
-      --height-multiplier: 6px;
-      --font-size: 16px;
-  }
+        &::placeholder {
+            color: var(--color-primary-accent);
+        }
 
-  &.compact {
-      --height-multiplier: 5px;
-      --font-size: 15px;
-  }
+        &:focus {
+            border-bottom-color: var(--color-primary);
 
-  
+            &::placeholder {
+                color: var(--color-black-alt3);
+            }
+        }
+    }
+
+
+    &.comfortable {
+        --height-multiplier: 6px;
+        --font-size: 16px;
+    }
+
+    &.compact {
+        --height-multiplier: 5px;
+        --font-size: 15px;
+    }
+
+
 }
 
-.dropdownContainer{
-  max-height: calc(var(--grid-unit)* 60px);
-  overflow-y: auto;
+.dropdownContainer {
+    max-height: calc(var(--grid-unit)* 60px);
+    overflow-y: auto;
 
-  .helperText{
-      padding: calc(var(--grid-unit)* 2px);
-  }
+    .helperText {
+        display: flex;
+        padding: 0 calc(var(--grid-unit)* 2px);
+        min-height: calc(var(--grid-unit) * 8px);
+        align-items: center;
+    }
 }
-
-
-
